2010-02-01 Eric Wasylishen <ewasylishen@gmail.com>

	* Source/GSThemeDrawing.m: Preliminary support for themeing the window
	resize bar with tiles.

2010-02-01 Eric Wasylishen <ewasylishen@gmail.com>

	* Source/GSTheme.m:
	* Source/GSThemeDrawing.m:
	* Source/NSButtonCell.m
	* Headers/Additions/GNUstepGUI/GSTheme.h:
	Add a new theme state, GSThemeDisabledState.

2010-01-31 Eric Wasylishen <ewasylishen@gmail.com>

	* Source/GSTheme.m:
	* Source/GSThemeDrawing.m:
	* Headers/Additions/GNUstepGUI/GSTheme.h: Use theme tiles (if available)
	to draw progress bars. New tile name: GSProgressIndicatorBarDeterminate

2010-01-31 Eric Wasylishen <ewasylishen@gmail.com>

	* Source/GSThemeDrawing.m: Use theme tiles (if available)
	to draw segmented controls, chosen based on the segment style constant,
	and falling back to drawing buttons if the segment tiles are not
	available.

2010-01-29 Eric Wasylishen <ewasylishen@gmail.com>

	* Source/GSTheme.m:
	* Source/GSThemeDrawing.m:
	* Headers/Additions/GNUstepGUI/GSTheme.h: Use theme tiles (if available)
	to draw menu backgrounds and items. New tile names:
	GSMenuHorizontalBackground
	GSMenuVerticalBackground
	GSMenuHorizontalItem
	GSMenuVerticalItem

2010-01-29 22:14-EST Gregory John Casamento <greg.casamento@gmail.com>

	* Headers/Additions/GNUstepGUI/GSTheme.h: Added new method
	declaration for updateAllWindowsWithMenu:
	* Source/GSThemeMenu.m: Added default implementation of 
	updateAllWindowsWithMenu:
	* Source/NSMenu.m: Added call to updateAllWindowsWithMenu: on
	current theme.

2010-01-29 Eric Wasylishen <ewasylishen@gmail.com>

	* Source/NSTableHeaderCell.m:
	* Source/GSTheme.m:
	* Source/NSTableHeaderView.m:
	* Source/GSThemeDrawing.m:
	* Headers/Additions/GNUstepGUI/GSTheme.h: Use theme tiles (if available)
	to draw table headers. New tile names are GSTableHeader and 
	GSTableCorner.

2010-01-29 Eric Wasylishen <ewasylishen@gmail.com>

	* Source/GSThemeDrawing.m (-cellForScrollerKnobSlot:): If there are